--- a/style.scss
+++ b/style.scss
@@ -97,6 +97,7 @@ $guide-pink: #f9a8d4;
    3. Widget Component
    ========================================= */
 .influencer-search-filter-holder {
+    display: flex;
     * {
         font-family: Inter;
     }
