--- a/style.scss
+++ b/style.scss
@@ -112,7 +112,7 @@ $guide-pink: #f9a8d4;
         margin-bottom: 16px;
         font-weight: 600;
         color: $text-header;
-
+    font-size: 14px;
         .reset-btn {
             font-size: 0.9rem;
             text-decoration: underline;
