--- a/style.css
+++ b/style.css
@@ -102,6 +102,8 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
     overflow-y: auto;
     z-index: 10;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
+    .filter-widget.select-filter .checkbox-lists .checkbox-list-item {
+      padding: 5px 10px; }
     .filter-widget.select-filter .checkbox-lists.show {
       display: block; }
   .filter-widget .dropdown-container {
@@ -139,7 +141,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
         transform: rotate(-135deg);
         margin-top: 4px; }
   .filter-widget .checkbox-lists .checkbox-list-item {
-    padding: 5px 10px;
+    padding: 5px 0;
     cursor: pointer;
     display: flex;
     align-items: center;
