--- a/style.scss
+++ b/style.scss
@@ -264,3 +264,21 @@ $guide-pink: #f9a8d4;
         width: 100%;
     }
 }
+
+.influencer-search-button {
+    button {
+        width: 100%;
+        background-color: transparent;
+        color: var(--e-global-color-accent);
+        font-size: 14px;
+        letter-spacing: 0.7px;
+        font-weight: 600;
+        &:hover,
+        &:active,
+        &:focus {
+            background-color: var(--e-global-color-accent);
+            color: #fff;
+            border-color: var(--e-global-color-accent);
+        }
+    }
+}
