--- a/style.scss
+++ b/style.scss
@@ -266,19 +266,27 @@ $guide-pink: #f9a8d4;
 }
 
 .influencer-search-button {
-    button {
-        width: 100%;
-        background-color: transparent;
-        color: var(--e-global-color-accent);
+    width: 100%;
+    background-color: transparent;
+    color: var(--e-global-color-accent);
+    font-size: 14px;
+    letter-spacing: 0.7px;
+    font-weight: 600;
+    &:hover,
+    &:active,
+    &:focus {
+        background-color: var(--e-global-color-accent);
+        color: #fff;
+        border-color: var(--e-global-color-accent);
+    }
+}
+
+.save-this-search-button {
+    text-align: center;
+    span {
+        text-decoration: underline;
+        cursor: pointer;
+        font-weight: 500;
         font-size: 14px;
-        letter-spacing: 0.7px;
-        font-weight: 600;
-        &:hover,
-        &:active,
-        &:focus {
-            background-color: var(--e-global-color-accent);
-            color: #fff;
-            border-color: var(--e-global-color-accent);
-        }
     }
 }
