--- a/style.css
+++ b/style.css
@@ -187,14 +187,14 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 .range-filter input {
   width: 100%; }
 
-.influencer-search-button {
+.influencer-search-button.influencer-search-button.influencer-search-button {
   width: 100%;
   background-color: transparent;
   color: var(--e-global-color-accent);
   font-size: 14px;
   letter-spacing: 0.7px;
   font-weight: 600; }
-  .influencer-search-button:hover, .influencer-search-button:active, .influencer-search-button:focus {
+  .influencer-search-button.influencer-search-button.influencer-search-button:hover, .influencer-search-button.influencer-search-button.influencer-search-button:active, .influencer-search-button.influencer-search-button.influencer-search-button:focus {
     background-color: var(--e-global-color-accent);
     color: #fff;
     border-color: var(--e-global-color-accent); }
