--- a/style.scss
+++ b/style.scss
@@ -265,7 +265,7 @@ $guide-pink: #f9a8d4;
     }
 }
 
-.influencer-search-button {
+.influencer-search-button.influencer-search-button.influencer-search-button {
     width: 100%;
     background-color: transparent;
     color: var(--e-global-color-accent);
