--- a/style.scss
+++ b/style.scss
@@ -281,7 +281,7 @@ $guide-pink: #f9a8d4;
     }
 }
 
-.save-this-search-button {
+.save-this-search {
     text-align: center;
     span {
         text-decoration: underline;
