--- a/style.scss
+++ b/style.scss
@@ -290,3 +290,9 @@ $guide-pink: #f9a8d4;
         font-size: 14px;
     }
 }
+
+.fixed-long-text {
+    white-space: normal; /* Ensures text is allowed to wrap */
+    overflow-wrap: break-word; /* Prevents long words/URLs from overflowing */
+    word-break: break-word; /* Adds wider browser support */
+}
