--- a/style.css
+++ b/style.css
@@ -207,7 +207,8 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
     font-weight: 500;
     font-size: 14px; }
 
-.fixed-long-text {
+.fixed-long-text,
+.fixed-long-text > * {
   white-space: normal;
   /* Ensures text is allowed to wrap */
   overflow-wrap: break-word;
