--- a/style.scss
+++ b/style.scss
@@ -291,7 +291,8 @@ $guide-pink: #f9a8d4;
     }
 }
 
-.fixed-long-text {
+.fixed-long-text,
+.fixed-long-text > * {
     white-space: normal; /* Ensures text is allowed to wrap */
     overflow-wrap: break-word; /* Prevents long words/URLs from overflowing */
     word-break: break-word; /* Adds wider browser support */
