--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #FFD33C;
   /* Gray when off */
   -webkit-transition: .4s;
   transition: .4s; }
@@ -250,7 +250,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: white;
+  background-color: #3B1527;
   -webkit-transition: .4s;
   transition: .4s; }
 
