--- a/style.scss
+++ b/style.scss
@@ -321,7 +321,7 @@ $guide-pink: #f9a8d4;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc; /* Gray when off */
+  background-color: #FFD33C; /* Gray when off */
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -334,7 +334,7 @@ $guide-pink: #f9a8d4;
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: white;
+  background-color: #3B1527;
   -webkit-transition: .4s;
   transition: .4s;
 }
