--- a/style.scss
+++ b/style.scss
@@ -300,66 +300,66 @@ $guide-pink: #f9a8d4;
 
 /* 1. The Switch Container */
 .toggle-switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
 }
 
 /* 2. Hide default HTML checkbox */
 .toggle-switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 
 /* 3. The Slider (Background) */
 .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #FFD33C; /* Gray when off */
-  -webkit-transition: .4s;
-  transition: .4s;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ffd33c; /* Gray when off */
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
 }
 
 /* 4. The Knob (Circle) */
 .slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: #3B1527;
-  -webkit-transition: .4s;
-  transition: .4s;
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: #3b1527;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
 }
 
 /* 5. Styles when Checked (ON state) */
 input:checked + .slider {
-  background-color: #2196F3; /* Change this hex code for your brand color */
+    background-color: #2196f3; /* Change this hex code for your brand color */
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px #2196f3;
 }
 
 /* 6. Move the Knob when checked */
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
 }
 
 /* 7. Rounded corners (Make it a pill shape) */
 .slider.round {
-  border-radius: 34px;
+    border-radius: 34px;
 }
 
 .slider.round:before {
-  border-radius: 50%;
+    border-radius: 50%;
 }
