--- a/style.scss
+++ b/style.scss
@@ -374,4 +374,5 @@ input:checked + .slider:before {
     border-radius: 999px; // Pill shape
     font-size: 13px;
     font-weight: 500;
+    line-height: 1;
 }
