--- a/style.css
+++ b/style.css
@@ -287,4 +287,8 @@ input:checked + .slider:before {
   font-weight: 500;
   line-height: 1; }
 
+.tab-style-1 .e-n-tabs-heading {
+  display: inline-flex;
+  margin-left: auto; }
+
 /*# sourceMappingURL=style.css.map */
