--- a/style.css
+++ b/style.css
@@ -289,6 +289,9 @@ input:checked + .slider:before {
 
 .tab-style-1 .e-n-tabs-heading {
   display: inline-flex;
-  margin-left: auto; }
+  margin-left: auto;
+  border-radius: 5px;
+  border: 1px solid #F77D67;
+  overflow: hidden; }
 
 /*# sourceMappingURL=style.css.map */
