--- a/style.scss
+++ b/style.scss
@@ -382,7 +382,12 @@ input:checked + .slider:before {
         display: inline-flex;
         margin-left: auto;
         border-radius: 5px;
-        border: 1px solid #F77D67;
+        border: 1px solid #f77d67;
         overflow: hidden;
+        > .e-n-tab-title {
+            &:not(:last-child) {
+                border-right: 1px solid #bcbcbc;
+            }
+        }
     }
 }
