--- a/style.css
+++ b/style.css
@@ -291,7 +291,9 @@ input:checked + .slider:before {
   display: inline-flex;
   margin-left: auto;
   border-radius: 5px;
-  border: 1px solid #F77D67;
+  border: 1px solid #f77d67;
   overflow: hidden; }
+  .tab-style-1 .e-n-tabs-heading > .e-n-tab-title:not(:last-child) {
+    border-right: 1px solid #bcbcbc; }
 
 /*# sourceMappingURL=style.css.map */
