--- a/style.scss
+++ b/style.scss
@@ -378,6 +378,7 @@ input:checked + .slider:before {
     &.style-2 {
         font-size: 15px;
         border-radius: 5px;
+        border: none;
     }
 }
 
