--- a/style.css
+++ b/style.css
@@ -289,7 +289,8 @@ input:checked + .slider:before {
   .chip.style-2 {
     font-size: 15px;
     border-radius: 5px;
-    border: none; }
+    border: none;
+    font-weight: 400; }
   .chip.bg-2 {
     background-color: #FFF7E0;
     color: #AB4B09; }
