--- a/style.scss
+++ b/style.scss
@@ -379,6 +379,8 @@ input:checked + .slider:before {
         font-size: 15px;
         border-radius: 5px;
         border: none;
+    font-weight: 400;
+
     }
     &.bg-2 {
         background-color: #FFF7E0;
