--- a/style.scss
+++ b/style.scss
@@ -379,12 +379,11 @@ input:checked + .slider:before {
         font-size: 15px;
         border-radius: 5px;
         border: none;
-    font-weight: 400;
-
+        font-weight: 400;
     }
     &.bg-2 {
-        background-color: #FFF7E0;
-        color: #AB4B09;
+        background-color: #fff7e0;
+        color: #ab4b09;
     }
 }
 
@@ -405,7 +404,6 @@ input:checked + .slider:before {
     gap: 8px;
 }
 
-
 .influencer-niches-holder {
     .chip {
         display: flex;
@@ -415,4 +413,11 @@ input:checked + .slider:before {
             content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><g id="insta-tag" transform="translate(-1 -1)"><path id="Path_136" data-name="Path 136" d="M10.364,14.727A4.364,4.364,0,1,0,6,10.364,4.364,4.364,0,0,0,10.364,14.727Zm0-1.455a2.909,2.909,0,1,0-2.909-2.909A2.909,2.909,0,0,0,10.364,13.273Z" transform="translate(-1.364 -1.364)" fill="%23ab4b09" fill-rule="evenodd"/><path id="Path_137" data-name="Path 137" d="M17.727,5a.727.727,0,1,0,.727.727A.727.727,0,0,0,17.727,5Z" transform="translate(-4.364 -1.091)" fill="%23ab4b09"/><path id="Path_138" data-name="Path 138" d="M1.476,3.383C1,4.316,1,5.538,1,7.982v2.036c0,2.444,0,3.666.476,4.6a4.363,4.363,0,0,0,1.907,1.907C4.316,17,5.538,17,7.982,17h2.036c2.444,0,3.666,0,4.6-.476a4.363,4.363,0,0,0,1.907-1.907c.476-.933.476-2.155.476-4.6V7.982c0-2.444,0-3.666-.476-4.6a4.363,4.363,0,0,0-1.907-1.907C13.684,1,12.462,1,10.018,1H7.982c-2.444,0-3.666,0-4.6.476A4.364,4.364,0,0,0,1.476,3.383Zm8.543-.928H7.982c-1.246,0-2.093,0-2.748.055a3.139,3.139,0,0,0-1.191.262A2.909,2.909,0,0,0,2.772,4.043a3.139,3.139,0,0,0-.262,1.191c-.053.655-.055,1.5-.055,2.748v2.036c0,1.246,0,2.093.055,2.748a3.14,3.14,0,0,0,.262,1.191,2.909,2.909,0,0,0,1.271,1.271,3.139,3.139,0,0,0,1.191.262c.655.053,1.5.055,2.748.055h2.036c1.246,0,2.093,0,2.748-.055a3.139,3.139,0,0,0,1.191-.262,2.909,2.909,0,0,0,1.271-1.271,3.139,3.139,0,0,0,.262-1.191c.053-.655.055-1.5.055-2.748V7.982c0-1.246,0-2.093-.055-2.748a3.139,3.139,0,0,0-.262-1.191,2.909,2.909,0,0,0-1.271-1.271,3.14,3.14,0,0,0-1.191-.262C12.111,2.456,11.264,2.455,10.018,2.455Z" fill="%23ab4b09" fill-rule="evenodd"/></g></svg>');
         }
     }
+}
+
+.static--block.static--block {
+    width: 100%;
+    padding: 20px;
+    background-color: var(--e-global-color-3868d1d);
+    border-radius: 10px;
 }
