--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ input:checked + .slider:before {
   font-size: 18px;
   color: var(--e-global-color-primary); }
 
-.pmpro_section #loginform .login-remember {
+.pmpro_section #loginform .login-remember label {
   font-size: 18px;
   color: var(--e-global-color-primary); }
 
