--- a/style.scss
+++ b/style.scss
@@ -433,7 +433,7 @@ input:checked + .slider:before {
 }
 
 .pmpro.pmpro {
-    padding: 20px;
+    padding: 50px 20px;
     background-color: #fef6f3;
     * {
         font-family: Inter !important;
