--- a/style.css
+++ b/style.css
@@ -330,7 +330,7 @@ input:checked + .slider:before {
   color: var(--e-global-color-primary); }
 
 .pmpro.pmpro {
-  padding: 20px;
+  padding: 50px 20px;
   background-color: #fef6f3; }
   .pmpro.pmpro * {
     font-family: Inter !important; }
