--- a/style.css
+++ b/style.css
@@ -333,6 +333,10 @@ input:checked + .slider:before {
   font-size: 18px;
   color: var(--e-global-color-primary); }
 
+.pmpro_form_field.pmpro_form_field input {
+  font-size: 18px;
+  color: #000; }
+
 .pmpro.pmpro {
   padding: 50px 20px;
   background-color: #fef6f3; }
