--- a/style.scss
+++ b/style.scss
@@ -432,9 +432,16 @@ input:checked + .slider:before {
     color: var(--e-global-color-primary);
 }
 
-.pmpro_form_label:not(.pmpro_form_label-inline){
-        font-size: 18px;
+.pmpro_form_label:not(.pmpro_form_label-inline) {
+    font-size: 18px;
     color: var(--e-global-color-primary);
+}
+
+.pmpro_form_field.pmpro_form_field {
+    input {
+        font-size: 18px;
+        color: #000;
+    }
 }
 
 .pmpro.pmpro {
