--- a/style.scss
+++ b/style.scss
@@ -437,7 +437,7 @@ input:checked + .slider:before {
     color: var(--e-global-color-primary);
 }
 
-.pmpro_form_field.pmpro_form_field {
+.pmpro_form_field.pmpro_form_field.pmpro_form_field.pmpro_form_field {
     input {
         font-size: 18px;
         color: #000;
