--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ input:checked + .slider:before {
   font-size: 18px;
   color: var(--e-global-color-primary); }
 
-.pmpro_form_field.pmpro_form_field input {
+.pmpro_form_field.pmpro_form_field.pmpro_form_field.pmpro_form_field input {
   font-size: 18px;
   color: #000; }
 
