--- a/style.css
+++ b/style.css
@@ -343,5 +343,7 @@ input:checked + .slider:before {
   max-width: 1430px;
   margin-left: auto;
   margin-right: auto; }
+  .pmpro.pmpro .pmpro_section:last-child {
+    margin-bottom: 0; }
 
 /*# sourceMappingURL=style.css.map */
