--- a/style.scss
+++ b/style.scss
@@ -452,5 +452,8 @@ input:checked + .slider:before {
         max-width: 1430px;
         margin-left: auto;
         margin-right: auto;
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
