--- a/style.scss
+++ b/style.scss
@@ -457,3 +457,10 @@ input:checked + .slider:before {
         }
     }
 }
+
+
+.breadcrumbs {
+    background-color: #EDF7F6;
+    padding: 14px;
+    border-radius: 5px;
+}
