--- a/style.css
+++ b/style.css
@@ -346,4 +346,9 @@ input:checked + .slider:before {
   .pmpro.pmpro .pmpro_section:last-child {
     margin-bottom: 0; }
 
+.breadcrumbs {
+  background-color: #EDF7F6;
+  padding: 14px;
+  border-radius: 5px; }
+
 /*# sourceMappingURL=style.css.map */
