--- a/style.css
+++ b/style.css
@@ -350,6 +350,10 @@ input:checked + .slider:before {
   background-color: #edf7f6;
   padding: 14px;
   border-radius: 5px; }
+  .breadcrumbs ul {
+    list-style: none;
+    padding: 0;
+    margin: 0; }
   .breadcrumbs .dark {
     color: #034146; }
 
