--- a/style.scss
+++ b/style.scss
@@ -462,6 +462,11 @@ input:checked + .slider:before {
     background-color: #edf7f6;
     padding: 14px;
     border-radius: 5px;
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
     .dark {
         color: #034146;
     }
