--- a/style.scss
+++ b/style.scss
@@ -462,6 +462,7 @@ input:checked + .slider:before {
     background-color: #edf7f6;
     padding: 14px;
     border-radius: 5px;
+    font-size: 16px;
     ul {
         list-style: none;
         padding: 0;
