--- a/style.scss
+++ b/style.scss
@@ -467,6 +467,11 @@ input:checked + .slider:before {
         list-style: none;
         padding: 0;
         margin: 0;
+        li {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
     }
     .dark {
         color: #034146;
