--- a/style.css
+++ b/style.css
@@ -350,7 +350,8 @@ input:checked + .slider:before {
   background-color: #edf7f6;
   padding: 14px;
   border-radius: 5px;
-  font-size: 16px; }
+  font-size: 16px;
+  font-family: Inter,sans-serif; }
   .breadcrumbs ul {
     list-style: none;
     padding: 0;
