--- a/style.scss
+++ b/style.scss
@@ -463,6 +463,7 @@ input:checked + .slider:before {
     padding: 14px;
     border-radius: 5px;
     font-size: 16px;
+    font-family: Inter,sans-serif;
     ul {
         list-style: none;
         padding: 0;
