--- a/style.scss
+++ b/style.scss
@@ -463,7 +463,9 @@ input:checked + .slider:before {
     padding: 14px;
     border-radius: 5px;
     font-size: 16px;
-    font-family: Inter,sans-serif;
+    font-family: Inter, sans-serif;
+    color: #034146;
+
     ul {
         list-style: none;
         padding: 0;
@@ -474,7 +476,8 @@ input:checked + .slider:before {
             gap: 10px;
         }
     }
-    .dark {
-        color: #034146;
+
+    .light {
+        opacity: 0.5;
     }
 }
