--- a/style.scss
+++ b/style.scss
@@ -470,10 +470,19 @@ input:checked + .slider:before {
         list-style: none;
         padding: 0;
         margin: 0;
+        display: flex;
+        align-items: center;
+            gap: 10px;
+
         li {
             display: flex;
             align-items: center;
             gap: 10px;
+            svg {
+                width: 16px;
+                height: 16px;
+                flex: 0 0 16px;
+            }
         }
     }
 
