--- a/style.scss
+++ b/style.scss
@@ -493,7 +493,12 @@ input:checked + .slider:before {
         ul {
             li {
                 &:not(:last-child)::after {
-                    content: ">";
+                    content: "";
+                    width: 7px;
+                    height: 7px;
+                    border-left: 1px solid;
+                    border-top: 1px solid;
+                    transform: rotate(135deg);
                 }
             }
         }
