--- a/style.scss
+++ b/style.scss
@@ -500,3 +500,23 @@ input:checked + .slider:before {
         }
     }
 }
+
+.premium-content-notice {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    gap: 40px;
+    .spend-credit-notice {
+        background: transparent linear-gradient(251deg, #ecf799 0%, #caf7a1 30%, #d6f79e 67%, #bbf7a6 100%) 0% 0%
+            no-repeat padding-box;
+        border: 1px solid #034146;
+        font-size: 12px;
+        color: #034146;
+        font-weight: bold;
+        padding: 14px 24px;
+        border-radius: 5px;
+        letter-spacing: 0.6px;
+    }
+}
