--- a/style.scss
+++ b/style.scss
@@ -518,5 +518,15 @@ input:checked + .slider:before {
         padding: 14px 24px;
         border-radius: 5px;
         letter-spacing: 0.6px;
+        font-family: Inter, sans-serif;
+    }
+    button:not(:hover) {
+        color: #fff;
+        font-family: "Inter";
+        font-size: 14px;
+        letter-spacing: 0.7px;
+        border: none;
+        line-height: 1;
+        padding: 14px 25px;
     }
 }
