--- a/style.scss
+++ b/style.scss
@@ -501,7 +501,7 @@ input:checked + .slider:before {
     }
 }
 
-.premium-content-notice {
+.premium-content-notice.premium-content-notice.premium-content-notice {
     display: flex;
     flex-direction: column;
     justify-content: center;
