--- a/style.scss
+++ b/style.scss
@@ -530,3 +530,14 @@ input:checked + .slider:before {
         padding: 14px 25px;
     }
 }
+
+.influencer-search-main {
+    .influencer-search-item-row {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        > div {
+            flex-grow: 1;
+        }
+    }
+}
