--- a/style.scss
+++ b/style.scss
@@ -550,4 +550,9 @@ input:checked + .slider:before {
         font-weight: var(--e-global-typography-7d2bc59-font-weight);
         line-height: var(--e-global-typography-7d2bc59-line-height);
     }
+
+    .filter-widget .tags-container {
+        flex-direction: column;
+            align-items: flex-start;
+    }
 }
