--- a/style.css
+++ b/style.css
@@ -412,7 +412,7 @@ input:checked + .slider:before {
   gap: 10px; }
   .influencer-search-main .influencer-search-item-row > div {
     flex-grow: 1; }
-.influencer-search-main textarea {
+.influencer-search-main .influencer-search-item-field textarea {
   background-color: #ffffff;
   border-color: var(--e-global-color-670824e);
   border-width: 1px 1px 1px 1px;
@@ -420,7 +420,8 @@ input:checked + .slider:before {
   font-family: var(--e-global-typography-7d2bc59-font-family), Sans-serif;
   font-size: var(--e-global-typography-7d2bc59-font-size);
   font-weight: var(--e-global-typography-7d2bc59-font-weight);
-  line-height: var(--e-global-typography-7d2bc59-line-height); }
+  line-height: var(--e-global-typography-7d2bc59-line-height);
+  width: 100%; }
 .influencer-search-main .filter-widget .tags-container {
   flex-direction: column;
   align-items: flex-start; }
