--- a/style.scss
+++ b/style.scss
@@ -558,4 +558,8 @@ input:checked + .slider:before {
         flex-direction: column;
         align-items: flex-start;
     }
+
+    .influencer-search-button {
+        
+    }
 }
