--- a/style.scss
+++ b/style.scss
@@ -560,7 +560,7 @@ input:checked + .slider:before {
         align-items: flex-start;
     }
 
-    .influencer-search-button {
+    .influencer-search-button.influencer-search-button.influencer-search-button {
         width: auto;
         margin-left: auto;
         display: block;
