--- a/style.css
+++ b/style.css
@@ -193,7 +193,8 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
   color: var(--e-global-color-accent);
   font-size: 14px;
   letter-spacing: 0.7px;
-  font-weight: 600; }
+  font-weight: 600;
+  cursor: pointer; }
   .influencer-search-button.influencer-search-button.influencer-search-button:hover, .influencer-search-button.influencer-search-button.influencer-search-button:active, .influencer-search-button.influencer-search-button.influencer-search-button:focus {
     background-color: var(--e-global-color-accent);
     color: #fff;
@@ -435,8 +436,7 @@ input:checked + .slider:before {
 .influencer-search-main .influencer-search-button.influencer-search-button.influencer-search-button {
   width: auto;
   margin-left: auto;
-  display: block;
-  cursor: pointer; }
+  display: block; }
   .influencer-search-main .influencer-search-button.influencer-search-button.influencer-search-button:not(:hover):not(:active):not(:focus) {
     background-color: var(--e-global-color-accent);
     color: #fff; }
