--- a/style.scss
+++ b/style.scss
@@ -600,3 +600,10 @@ input:checked + .slider:before {
         }
     }
 }
+
+
+.save-influencer-trigger.save-influencer-trigger.save-influencer-trigger {
+    .elementor-button {
+        
+    }
+}
