--- a/style.css
+++ b/style.css
@@ -454,4 +454,9 @@ input:checked + .slider:before {
       width: 23px;
       height: 23px; }
 
+.break-word {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto; }
+
 /*# sourceMappingURL=style.css.map */
